refactor: harden auth and order contracts
Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>